# kicad

3d-viewer/3d_rendering/: track_ball.h
common/: CMakeLists.txt  advanced_config.cpp  bitmap_info.cpp  fp_lib_table.cpp  lib_tree_model.cpp  lib_tree_model_adapter.cpp
common/dialog_about/: dialog_about.cpp  dialog_about_base.cpp  dialog_about_base.fbp  dialog_about_base.h
eeschema/: CMakeLists.txt  lib_symbol.cpp  lib_symbol.h  sch_base_frame.cpp  sch_base_frame.h  symbol_lib_table.cpp  symbol_lib_table.h  symbol_tree_model_adapter.cpp  symbol_tree_model_adapter.h
include/: advanced_config.h  fp_lib_table.h  lib_tree_model.h  lib_tree_model_adapter.h
kicad/: kicad_manager_frame.cpp  update_manager.cpp
pcbnew/: CMakeLists.txt  files.cpp  footprint_preview_panel.cpp  footprint_preview_panel.h  io_mgr.cpp  io_mgr.h  menubar_pcb_editor.cpp  pcb_edit_frame.h  pcbnew.cpp  pcbnew_settings.h  project_pcb.cpp
pcbnew/pcb_io/odbpp/: CMakeLists.txt  odb_attribute.cpp  odb_attribute.h  odb_component.cpp  odb_component.h  odb_defines.h  odb_eda_data.cpp  odb_eda_data.h  odb_entity.cpp  odb_entity.h  odb_feature.cpp  odb_feature.h  odb_fonts.cpp  odb_netlist.cpp  odb_netlist.h  odb_plugin.cpp  odb_plugin.h  odb_util.cpp  odb_util.h  pcb_io_odbpp.cpp  pcb_io_odbpp.h
pcbnew/plugins/odb/: CMakeLists.txt  odb_attribute.cpp  odb_attribute.h  odb_component.cpp  odb_component.h  odb_defines.h  odb_eda_data.cpp  odb_eda_data.h  odb_entity.cpp  odb_entity.h  odb_feature.cpp  odb_feature.h  odb_fonts.cpp  odb_net.h  odb_plugin.cpp  odb_plugin.h  odb_util.cpp  odb_util.h
(+41 files in other folders)
